src/test/ui/consts/miri_unleashed/non_const_fn.stderr
warning: skipping const checks
  --> $DIR/non_const_fn.rs:8:15
   |
LL | const C: () = foo();
   |               ^^^^^

error[E0080]: evaluation of constant expression failed
  --> $DIR/non_const_fn.rs:11:22
   |
LL |     println!("{:?}", C);
   |                      ^ referenced constant has errors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
